# iterativenn

./: LICENSE  README.md  Runner_AH.py  Runner_AHV.py  Runner_AH_Uniform.py  Runner_FK.py  Runner_RA.py  Runner_RA_Uniform.py  Score_AD.py  config.yaml  minari_reward.py
iterativenn/: AUTHORS.md  LICENSE.txt  README.md  pyproject.toml  redo_venv.sh  setup.cfg  setup_codespaces.sh  wandb_path.json
iterativenn/.github/workflows/: python-app.yml
iterativenn/notebooks/: .gitignore  04-rcp-MaskedLinear_development.ipynb  05-rcp-update_thoughts.ipynb  06-rcp-sparse-comparison.ipynb  09-rcp-Sequential2D-training.ipynb  10-rcp-asteval-test.ipynb  11-rcp-LSTM-sizes.ipynb  12-rcp-growing-math.ipynb  13-neil-harsh-sru-inn-test.ipynb  README.md  template.ipynb
iterativenn/notebooks/START_HERE/: 0-rcpMLP-vs-INN.ipynb  1-rcp-time-series copy.ipynb  1a-rcp-time-series-batch.py  1a-rcp-time-series-batch.sh  2-rcp-least-squares-growing.ipynb  3-rcp-multi-growing.ipynb  README.md
iterativenn/notebooks/atracting_manifold/: .gitignore  01-rcp-simple-maps.ipynb  4a-rcp-iterated-model-data.ipynb  manifold_batch.py  manifold_batch.yml
iterativenn/notebooks/colab/: iterativenn_deploy.py  simple_example.ipynb
iterativenn/notebooks/develop/: 01-hp-grow.ipynb  02-rcp-neil-idea.ipynb  08-rcp-transformer_tutorial.ipynb  12b-rcp-least-squares-growing_chem.ipynb  12b-rcp-least-squares-growing_chem_long.ipynb  12b-rcp-least-squares-growing_em.ipynb  14-rcp-multi-growing-two-long.ipynb  14b-rcp-multi-growing-two-long-iterations.ipynb  Visualization_test.ipynb  lit_tsv.ipynb  lstm_equations.ipynb  sparse_autoencoder_NOT_WORKING.py  sparse_test.ipynb  sparse_test_old.py  test.py
iterativenn/notebooks/develop/hugging_face/: .gitignore  01-rcp-getting_started.ipynb  02-rcp-wiki-103.ipynb  03-hp-LanguageModel-Seq2d-demo.ipynb
iterativenn/notebooks/gym/: 01-rcp-getting_started.ipynb_bak  requirements.txt
iterativenn/notebooks/paper/: arxiv.ipynb  dynamic_link_prediction.ipynb  dynamical_systems.ipynb  embeddings.ipynb  forward-forward.ipynb  graphs.ipynb  main.ipynb  memory.ipynb  multi-task initialization.ipynb  neural_networks_as_dynamical_systems.ipynb  nn_ensemble.ipynb  nn_memory.ipynb  nn_transformer.ipynb  project.csv  sparse_implementation.ipynb  xor.ipynb
iterativenn/notebooks/ray/: 01-rcp-ray-getting-started.ipynb
iterativenn/scripts/: .gitignore  README.md  Runner.py  runner_cli.py  test_runner_cli.py
iterativenn/scripts/conf/: acrobot.yaml  cartpole.yaml  config.yaml  lunar.yaml  slow.yaml
iterativenn/scripts/conf/base/: fast.yaml
iterativenn/scripts/conf/data/: acrobot.yaml  baseline_addition.yaml  cartpole.yaml  large.yaml  lunar.yaml  medium.yaml  small.yaml  tiny.yaml
iterativenn/scripts/conf/logger/: console.yaml  tensorboard.yaml  wandb.yaml  wandb_hp.yaml  wandb_offline.yaml
iterativenn/scripts/conf/model/: GRU.yaml  LSTM.yaml  RNN.yaml  description_dense.yaml  description_tiny.yaml  sequential2D_dense.yaml  sequential2D_identity_sparse.yaml  sequential2D_sparse.yaml  sequential2D_sparse_fast.yaml
iterativenn/scripts/conf/model/acrobot/: LSTM.yaml  (+2 more)
iterativenn/scripts/grow_gpt2/: gpt2_12_inn.py  gpt2_grow.py  gpt2_in_seq2d.py  gpt2_in_seq2d_w_sparse_skip.py  gpt2_inn_eval.py  gpt2_predict_to_cache.py
iterativenn/src/iterativenn/: RunnerUtils.py
iterativenn/src/iterativenn/lit_callbacks/: cache.py
iterativenn/src/iterativenn/lit_modules/: IteratedModel.py  IteratedModelBatch.py  IteratedModuleGPT2.py
iterativenn/src/iterativenn/nn_modules/: CustomLoss.py  Hadamard.py  HeterogeneousActivation.py  MaskedLinear.py  Sequential2D.py  SparseLinear.py  TimeStepVaryingLoss.py  h_identity.py  nlp.py
iterativenn/src/iterativenn/utils/: CustomMaskGenerator.py  DataModules.py  DatasetUtils.py  data_factory.py  gpt_config_utils.py  logger_factory.py  model_factory.py  model_wrappers.py  model_wrappers_old.py  operations.py
iterativenn/tests/: conftest.py  test_CustomLoss.py  test_CustomMaskGenrator.py  test_DataModules.py  test_DatasetUtils.py  test_IteratedModel.py  test_IteratedModelNLP.py  test_IteratedModuleGPT2.py  test_MLPvsINN.py  test_MaskedLinear.py  test_RunnerUtil.py  test_Sequential2D.py  test_Sequential2D_training.py  test_SparseLinear.py  test_gpt_config_utils.py  test_nlp.py
(+429 files in other folders)
